# angstron2

./: .gitignore  AppStart.cpp  BZK_BaseIncludes.h  BZK_POSIX.h  BZK_SDL.h  BZK_WCE.h  BZKmain.cpp  BZKmain.h  CMakeLists.txt  README.md  bp.sh  bslicer.sh  build.sh  build770test.sh  buildezxtest.sh  buildtest.sh  embuild.sh  ezx_build.sh  makeed.sh  n770build.sh  n8x0build.sh  old.n770build.sh  readme.txt  simbed.cpp  simbed_new.cpp  slicer.cpp  split.sh  test.cpp  wce_build.sh
AppArch/: BZK_App.h  BZK_AppArch.h  BZK_AppUI.h  BZK_Document.h  BZK_GraphicalElement.h  BZK_PainelLink.h  BZK_TextLabel.h  BZK_View.h
GameElements/: BZK_Actor.h  BZK_ActorManager.h  BZK_Applet.h  BZK_Bitmap.h  BZK_DevKB.h  BZK_DevMouse.h  BZK_DevSound.h  BZK_DevSound_stub.h  BZK_DevVideo.h  BZK_DeviceAction.h  BZK_DeviceIO.h  BZK_DeviceInput.h  BZK_DeviceOutput.h  BZK_Entity.h  BZK_Sector.h  BZK_Time.h  BZK_TypeSet.h  BZK_VolumetricSector.h  BZK_World.h  GameElements.h  GameElements_pure.h
SDL_gfx/: SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_wce.c  SDL_gfxPrimitives_wce.h
Toolkit/: BZK_AllocManager.h  BZK_Color2f.h  BZK_Color3f.h  BZK_Color4f.h  BZK_Constants.h  BZK_DOMNode.h  BZK_FastMath.h  BZK_FixP.h  BZK_FixP_float.h  BZK_FloatMath.h  BZK_ParsingTools.h  BZK_Queue.h  BZK_Rect.h  BZK_SAL.h  BZK_Stack.h  BZK_Toolkit.h  BZK_Vec2f.h  BZK_Vec3f.h  BZK_Vec4f.h  BZK_VecOps.h  BZK_Vector.h  BZK_XMLReader.h  BZK_XMLWriter.h  _BZK_XMLReader.h
Tools/: bp.sh  makeed.sh  restorer.cpp  simbed.cpp
Vacuum/: VAC_Actor.h  VAC_ActorManager.h  VAC_Applet.h  VAC_BaseIncludes.h  map.h  (+20 more)
(+74 files in other folders)
